	Fixed bug where updating styles in the advanced tab under the image dialog would remove the style attribute on cancel.
	Fixed bug where tinymce.full.min.js bundle script wasn't detected when looking for the tinymce root path.
	Fixed bug where the SaxParser would throw a malformed URI sequence for inproperly encoded uris.
	Fixed so menu shortcuts gets rendered with the Apple command icon patch contributed by Andy Keller.
	Fixed so the CSS compression of styles like "border" is a bit better for mixed values.
	Fixed so the template_popup_width/template_popup_height option works properly in the template plugin.
	Fixed so the languages parameter for AddOnManager.requireLangPack works the same way as for 3.x.
	Fixed so the autosave plugin uses the current page path, query string and editor id as it's default prefix.
Version 4.0.10 (2013-10-28)
	Added new forced_root_block_attrs option that allows you to specify attributes for the root block.
	Fixed bug where the custom resize handles didn't work properly on IE 11.
	Fixed bug where the code plugin would select all contents in IE when content was updated.
	Fixed bug where the scroll position wouldn't get applied to floating toolbars.
	Fixed bug where focusing in/out of the editor would move the caret to the top of the editor on IE 11.
	Fixed bug where the listboxes for link and image lists wasn't updated when the url/src was changed.
	Fixed bug where selection bookmark elements would be visible in the elements path list.
Version 4.0.9 (2013-10-24)
	Added support for external template files to template plugin just set the templates option to a URL with JSON data.
	Added new allow_script_urls option. Enabled by default, trims all script urls from attributes.
	Fixed bug where IE would sometimes throw a "Permission denied" error unless the Sizzle doc was properly removed.
	Fixed bug where lists plugin would remove outer list items if inline editable element was within a LI parent.