@@ -13,6 +13,7 @@ Version 4.0.11 (2013-11-xx)
 	Fixed bug where updating styles in the advanced tab under the image dialog would remove the style attribute on cancel.
 	Fixed bug where tinymce.full.min.js bundle script wasn't detected when looking for the tinymce root path.
 	Fixed bug where the SaxParser would throw a malformed URI sequence for inproperly encoded uris.
+	Fixed bug where enabling table caption wouldn't properly render the caption element on IE 10 and below.
 	Fixed so menu shortcuts gets rendered with the Apple command icon patch contributed by Andy Keller.
 	Fixed so the CSS compression of styles like "border" is a bit better for mixed values.
 	Fixed so the template_popup_width/template_popup_height option works properly in the template plugin.
